@@ -1,6 +1,6 @@
 package com.soft1851.utils;
 
-import org.apache.commons.codec.binary.Base64;
+import sun.misc.BASE64Encoder;
 
 import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletResponse;
@@ -92,7 +92,8 @@ public class FileUtil {
         }
 
         // 对字节数组Base64编码并且返回
-        return Base64.encodeBase64String(fileData);
+        BASE64Encoder encoder = new BASE64Encoder();
+        return encoder.encode(fileData);
     }
 
 }
